<resources>
    <string name="app_name">TJOONER</string>
    <string name="login">Login</string>
    <string name="main_menu">Main menu</string>
    <string name="create_photo">Create photo</string>
    <string name="create_video">Create video</string>
    <string name="open_camera">Open Camera</string>
    <string name="title_activity_logged_in">Loggedin</string>
    <string name="user"></string>
    <string name="token"></string>
    <string name="click">Click</string>
    <string name="author">author</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="settings">Settings</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="video">Video</string>
    <string name="media">Media</string>
    <string name="logout">Log out</string>
    <string name="currentpage">You are already in this menu</string>
    <string name="playlist">Playlist</string>

    <string name="images">Images</string>
    <string name="whitespace"> </string>
    <string name="categories">Categories</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="save">Save</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="Remember_User_name">Remember username</string>
    <string name="Remember_Token">Login automatically</string>
    <string name="image_title">Title</string>
    <string name="image_description">Description</string>
    <string name="author_name">Name:</string>
    <string name="date">Date</string>
    <string name="media_type">Type of media</string>
    <string name="image">Image</string>
    <string name="send_image">send image</string>

</resources>
